// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    balance FLOAT 
    credit_limit FLOAT 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    unit_price FLOAT 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    amount FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    amount_total FLOAT 
    date_shipped DATETIME 
    notes VARCHAR 
    }

Table Location {
    id INTEGER [primary key]
    address VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    amount FLOAT 
    order_id INTEGER 
    }

Table Review {
    id INTEGER [primary key]
    product_id INTEGER 
    customer_id INTEGER 
    rating INTEGER 
    comment VARCHAR 
    }

Table Shipment {
    id INTEGER [primary key]
    shipment_date DATETIME 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    }



// Relationships
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: Review.(customer_id) < Customer.(id)
    Ref: Review.(product_id) < Product.(id)
